# Wazzaboy

./: AGENTS.md  HKJC_Codex_OS.md  README.md  TASKS.md  pyproject.toml
hkjc-edge-system/: .env.example  .gitignore  AGENTS.md  EDGE_DOCTRINE.md  LEAKAGE_POLICY.md  README.md  SOURCE_REGISTRY.yaml  pyproject.toml
hkjc-edge-system/logs/: conflict_log.csv  missing_data_log.csv  parser_error_log.csv  restricted_pages_log.csv
hkjc-edge-system/reports/: extraction_report.md  factor_availability_report.md  hkhorsedb_enrichment_report.md  model_readiness_report.md
hkjc-edge-system/scripts/: build_extraction_report.py  build_feature_store.py  build_hkjc_race_index.py  build_hkjc_race_index_quarterly.py  repair_processed_outputs.py  run_baseline_model.py  run_conflict_check.py  run_cross_source_conflict_check.py  run_hkhorsedb_discovery.py  run_hkhorsedb_extraction.py  run_hkjc_discovery.py  run_hkjc_extraction.py  run_hkjc_historical_backfill.py  run_hkjc_historical_backfill_quarterly.py  run_hkjc_results_extraction.py  run_model_readiness_report.py  run_rolling_origin_backtest.py  run_time_split_evaluation.py  run_validation.py
hkjc-edge-system/src/common/: logging_utils.py  normalise.py  quarterly.py  raw_archive.py  source_registry.py  validation.py
hkjc-edge-system/src/features/: build_feature_store.py  leakage_tags.py
hkjc-edge-system/src/hkhorsedb/: discovery.py  fetch.py  normalize.py  parse_tables.py
hkjc-edge-system/src/hkjc/: discovery.py  fetch.py  parse_barrier_trials.py  parse_comments.py  parse_dividends.py  parse_incidents.py  parse_odds.py  parse_race_card.py  parse_results.py  parse_trackwork.py  race_index.py  (+1 more)
hkjc-edge-system/tests/: test_backtest.py  test_calibration.py  test_conflict_check.py  test_ev.py  test_governance_files.py  test_hkhorsedb_discovery.py  test_hkjc_dividends_parser.py  test_hkjc_race_card_parser.py  test_hkjc_race_index.py  test_hkjc_results_parser.py  test_leakage_rules.py  test_market_probability.py  test_normalise.py  test_quarterly.py  test_scaffold_safety.py  test_source_registry.py  test_staking.py  test_validation.py  test_validation_identity.py
(+59 files in other folders)
