[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkjc-factory"
version = "0.1.0"
description = "Deterministic HKJC market-blended probability engine scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Wazzaboy"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
