[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkjc-edge-system"
version = "0.1.0"
description = "HKJC-first extraction and modeling foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
